--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 ---
 layout: default
-title: Boilerplate
+title: Miserere
 ---
 <header class="masthead">
     <div class="container">
-        <div class="row p-y-3">
-            <h1 class="text-xs-center">De Geist Boilerplate</h1>
+        <div class="row splash">
+          <div class="col align-self-center text-center">
+            <h1 class="display-1">Miserere</h1>
+            <h4 class="mb-5">Coming soon.</h4>
+            <a href="https://www.facebook.com/misererefilm/" class="btn btn-lg active" role="button" aria-pressed="true">Facebook</a>
+
+          </div>
         </div>
     </div>
 </header>
 <section class="p-y-3">
 </section>
 <footer>
+
 </footer>
