--- a/index.html
+++ b/index.html
@@ -1,26 +1,16 @@
 ---
 layout: default
-title: Miserere
+title: Home
 ---
 <header class="masthead">
     <div class="container">
         <div class="row splash">
           <div class="col align-self-center text-center">
             <h1 class="display-1">Miserere</h1>
-            <h4 class="mb-5">There are no temples.</h4>
+            <h4 class="mb-5">Coming soon.</h4>
             <a href="https://www.facebook.com/misererefilm/" class="btn btn-lg active" role="button" aria-pressed="true">Facebook</a>
           </div>
         </div>
     </div>
 </header>
-<section>
-  <div class="video-responsive">
-      <iframe src="https://player.vimeo.com/video/229456259?title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  </div>
-</section>
-
-
 <img class="floating-cutout" src="img/bethAdam_Cutout.png" />
-<footer>
-
-</footer>
