Kickstarter trailer update

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@ title: Home
         <div class="row splash">
           <div class="col align-self-center text-center">
             <h1 class="display-1">Miserere</h1>
-            <h4 class="mb-5">Coming soon.</h4>
-            <a href="https://www.facebook.com/misererefilm/" class="btn btn-lg active" role="button" aria-pressed="true">Facebook</a>
+            <div class="video-responsive">
+                <iframe width="480" height="270" src="https://www.kickstarter.com/projects/erasmusdearos/miserere-batsheba-and-king-david-retold/widget/video.html" frameborder="0" scrolling="no"> </iframe>
+            </div>
+            <h4 class="mb-5">Support the film on Kickstarter.</h4>
+            <a href="http://kck.st/2wzg8Nh" class="btn btn-lg active" role="button" aria-pressed="true">Kickstarter</a>
           </div>
         </div>
     </div>
