--- a/trailer.html
+++ b/trailer.html
@@ -3,7 +3,13 @@ layout: default
 title: Trailer
 ---
 <section>
-  <div class="video-responsive">
-      <iframe src="https://player.vimeo.com/video/229456259?title=0&byline=0&portrait=0&autoplay=1" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  <div class="container">
+    <div class="row splash">
+      <div class="col align-self-center">
+        <div class="video-responsive">
+          <iframe src="https://player.vimeo.com/video/229456259?title=0&byline=0&portrait=0&autoplay=1" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
