--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ title: Home
 <header class="masthead">
     <div class="container">
         <div class="row splash">
-          <div class="col-6 align-self-center synopsis p-5">
+          <div class="col-12 col-md-8 col-lg-6 align-self-center synopsis p-5">
             <h3 class="box-title">Synopsis</h3>
             <p class="lead">After breaking off the affair with her masked lover, Beth, a married woman and a mother, must fight to keep her multiple lives and identities apart. The scorned love is indeed a forceful one.</p>
           </div>
